--- a/personajes.html
+++ b/personajes.html
@@ -18,6 +18,7 @@
                 <li>
                     <a href="#">LA SERIE</a>
                     <ul class="vertical">
+                        <li><a href="#">HISTORIA</a></li>
                         <li><a href="personajes.html">PERSONAJES</a></li>
                         <li><a href="temporadas.html">TEMPORADAS</a></li>
                     </ul>
