Galeria terminada, arreglo de footer
se termino la pag de galeria.
se acomodo el footer.
cambio de fuente

--- a/galeria.html
+++ b/galeria.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilos.css">
         <link href="css/lightbox.css" rel="stylesheet">
-        <title> Loki - La serie. </title>
+        <title> Galeria. </title>
     </head>
     <body>
         <header>
@@ -13,34 +13,54 @@
                 <a href="index.html"><img src="imagenes/galeria/logo loki.png" alt="Logo Loki"></a>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-            <nav class="menu_bar">
+            <nav id="menu_bar" class="">
                 <ul class="horizontal">
                         <li><a href="index.html">INICIO</a></li>
                         <li>
                             <a href="#">LA SERIE</a>
                             <ul class="vertical">
+                                <li><a href="historia.html">HISTORIA</a></li>
                                 <li><a href="personajes.html">PERSONAJES</a></li>
                                 <li><a href="temporadas.html">TEMPORADAS</a></li>
                             </ul>
                         </li>       
-                        <li><a href="galeria.html">GALERIA</a></li>
+                        <li><a style="background-color: #174209" href="galeria.html">GALERIA</a></li>
                         <li><a href="reseñas.html">RESEÑAS</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
-            </nav>  
+              </nav>  
         </header>
         <section>
-            <article class="secundario">
-                <a class="example-image-link" href="imagenes/reparto/b15.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/reparto/b15.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/reparto/b15.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/reparto/b15.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
-                <a class="example-image-link" href="imagenes/reparto/b15.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/reparto/b15.jpg" alt="Buzz Lightyear volando"/></a>
+            <h1>GALERIA</h1>
+            <article class="galeria">
+                <a class="example-image-link" href="imagenes/galeria/cocodriloki.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/cocodriloki.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/Lamentis.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/Lamentis.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/loki.jpg" alt="Buzz Lightyear volando"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki1.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki1.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki2.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki2.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki3.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/loki3.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki_mobius.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/loki_mobius.jpg" alt="Buzz Lightyear volando"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki_y_sylvie.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/mobius.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_loki_1893.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/mobius_loki_1893.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_traje.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/mobius_traje.jpg" alt="Buzz Lightyear volando"/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_y_loki.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/mobius_y_loki.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/ouroboros_taller.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/ouroboros_taller.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/rompiendo.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/rompiendo.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
+                <a class="example-image-link" href="imagenes/galeria/timekeepers.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/timekeepers.jpg" alt="Buzz Lightyear volando"/></a>
+                <a class="example-image-link" href="imagenes/galeria/variante-loki.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/variante-loki.jpg" alt="Buzz Lightyear con su gato"/></a>
             </article>
         </section>
         <footer>
-            <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+            <div class="redes">
+                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+            </div>
+            <div class="copy">
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+            </div>
         </footer>
         <script type="text/javascript">
             function myFunction() {
