--- a/reseñas.html
+++ b/reseñas.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilos.css">
-        <title> Loki - La serie. </title>
+        <title> Reseñas. </title>
     </head>
     <body>
         <header>
@@ -12,30 +12,36 @@
                 <a href="index.html"><img src="imagenes/galeria/logo loki.png" alt="Logo Loki"></a>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-            <nav class="menu_bar">
+            <nav id="menu_bar" class="">
                 <ul class="horizontal">
                         <li><a href="index.html">INICIO</a></li>
                         <li>
                             <a href="#">LA SERIE</a>
                             <ul class="vertical">
+                                <li><a href="historia.html">HISTORIA</a></li>
                                 <li><a href="personajes.html">PERSONAJES</a></li>
                                 <li><a href="temporadas.html">TEMPORADAS</a></li>
                             </ul>
                         </li>       
                         <li><a href="galeria.html">GALERIA</a></li>
-                        <li><a href="reseñas.html">RESEÑAS</a></li>
+                        <li><a style="background-color: #174209" href="reseñas.html">RESEÑAS</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
-            </nav>  
+              </nav>  
         </header>
         <section>
-            
+            <h1>RESEÑAS</h1>
         </section>
         <footer>
-            <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+            <div class="redes">
+                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+            </div>
+            <div class="copy">
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+            </div>
         </footer>
         <script type="text/javascript">
             function myFunction() {
