--- a/personajes.html
+++ b/personajes.html
@@ -16,9 +16,9 @@
         <ul class="horizontal">
                 <li><a href="index.html">INICIO</a></li>
                 <li>
-                    <a href="#">LA SERIE</a>
+                    <a style="background-color: #174209" href="#">LA SERIE</a>
                     <ul class="vertical">
-                        <li><a href="#">HISTORIA</a></li>
+                        <li><a href="historia.html">HISTORIA</a></li>
                         <li><a href="personajes.html">PERSONAJES</a></li>
                         <li><a href="temporadas.html">TEMPORADAS</a></li>
                     </ul>
@@ -63,11 +63,16 @@
       </div>
     </section>
     <footer>
-      <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-      <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
-    </footer>
+      <div class="redes">
+          <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+          <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+          <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+      </div>
+      <div class="copy">
+          <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+      </div>
+  </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
