--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
-                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
             </div>
         </footer>
         <script type="text/javascript">
