--- a/contacto.html
+++ b/contacto.html
@@ -30,17 +30,37 @@
               </nav>  
         </header>
         <section>
-            <h1>CONTACTO</h1>
+            <div>
+                <h1>CONTACTO</h1>
+            </div>
+            <article class="secundario">
+                <div class="imgcont">
+                    <img src="imagenes/galeria/variante-loki1.jpg" alt="Variante de Loki">
+                </div>
+                <div class="div_form">
+                    <form class="form">
+                        <h3 class="contacto">ESCRIBINOS</h3>
+                        <input placeholder="nombre..."></input>
+                        <input placeholder="email..."></input>
+                        <input placeholder="mensaje..."></input>
+                        <button>Enviar</button>
+                        <div class="pie_contacto">
+                            <span class="fa fa-phone"></span> 054 11 5555 5555
+                            <span class="fa fa-envelope-o"></span> contacto@marvel.com
+                        </div>
+                    </form>
+                </div>    
+            </article>
         </section>
         <footer>
             <div class="redes">
-                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
-                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
             </div>
         </footer>
         <script type="text/javascript">
