--- a/galeria.html
+++ b/galeria.html
@@ -53,13 +53,13 @@
         </section>
         <footer>
             <div class="redes">
-                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
-                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
             </div>
         </footer>
         <script type="text/javascript">
