--- a/historia.html
+++ b/historia.html
@@ -27,7 +27,7 @@
                         <li><a href="reseñas.html">RESEÑAS</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
-              </nav>  
+            </nav>  
         </header>
         <section>
             <h1>HISTORIA</h1>
@@ -44,6 +44,7 @@
                         Louis D'Esposito<br>
                         Victoria Alonso<br>
                         Stephen Broussard<br><br>
+                        </p>
                 </div>
                 <div class="imaghist">
                      <img src="imagenes/galeria/tva_sylvie.jpg" alt="Poster de Sylvie de la TVA.">   
@@ -63,7 +64,8 @@
                         <u>Trama Principal</u><br><br>
                         "Loki" sigue la historia de una variante del dios del engaño, interpretado por Tom Hiddleston, quien se desvía de su línea temporal original después de robar el Teseracto en "Avengers: Endgame". Capturado por la Agencia de Variación Temporal (TVA), una organización que controla el flujo del tiempo, Loki enfrenta la opción de ser eliminado de la existencia o ayudar a la TVA a restaurar el orden en la línea temporal.<br><br>
                         
-                        Loki se une al agente Mobius M. Mobius (Owen Wilson) para cazar a una peligrosa variante de sí mismo: Sylvie (Sophia Di Martino), una versión femenina que busca desmantelar la TVA. A medida que Loki y Sylvie profundizan en los secretos de la TVA, descubren la verdad detrás de los Guardianes del Tiempo y se enfrentan a "El Que Permanece" (Jonathan Majors), cuyo control sobre la línea temporal tiene profundas implicaciones para el multiverso.<br><br>    
+                        Loki se une al agente Mobius M. Mobius (Owen Wilson) para cazar a una peligrosa variante de sí mismo: Sylvie (Sophia Di Martino), una versión femenina que busca desmantelar la TVA. A medida que Loki y Sylvie profundizan en los secretos de la TVA, descubren la verdad detrás de los Guardianes del Tiempo y se enfrentan a "El Que Permanece" (Jonathan Majors), cuyo control sobre la línea temporal tiene profundas implicaciones para el multiverso.<br><br>
+                        </p>    
                 </div>               
             </article>
             <article class="secundario">
@@ -98,13 +100,13 @@
         </section>
         <footer>
             <div class="redes">
-                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
-                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
             </div>
         </footer>
         <script type="text/javascript">
