--- a/reseñas.html
+++ b/reseñas.html
@@ -31,16 +31,45 @@
         </header>
         <section>
             <h1>RESEÑAS</h1>
+            <article class="reseñas">
+                <p><u><br>Collider:</u><br><br>
+
+                    Crítica: “La segunda temporada de 'Loki' es un triunfo visual y narrativo. Mantiene la intriga y el ritmo de la primera temporada mientras expande el universo de Loki de manera emocionante e impredecible. Tom Hiddleston sigue brillando en el papel titular, y la incorporación de nuevos personajes como Ouroboros 'OB' añade frescura a la serie.”<br><br></p>
+                <p><u><br>Empire:</u><br><br>
+
+                    Crítica: “La segunda temporada de 'Loki' entrega todo lo que los fans podrían esperar: un argumento retorcido, actuaciones sobresalientes y un enfoque más profundo en la mitología del multiverso. El show sigue siendo una de las piezas más innovadoras del MCU.”<br><br></p>
+                <p><u><br>THe Holliwood Reporter:</u><br><br>
+
+                    Crítica: “'Loki' temporada dos se enfrenta a la tarea de expandir el multiverso con gran éxito. La serie no solo mantiene su característico sentido del humor y el encanto, sino que también profundiza en temas complejos como el destino y el libre albedrío, sin perder de vista el desarrollo de sus personajes.”<br><br></p>
+                <p><u><br>IGN:</u><br><br>
+
+                    Crítica: “La nueva temporada de 'Loki' ofrece una emocionante continuación de su narrativa multiversal, con un equilibrio perfecto entre drama, acción y comedia. La química entre Hiddleston y Owen Wilson sigue siendo el corazón palpitante de la serie.”<br><br></p>   
+                <p><u><br>Entertainment Weekly:</u><br><br>
+
+                    Crítica: “La segunda temporada de 'Loki' no solo mantiene la calidad de la primera, sino que la supera con un guion aún más audaz y una dirección artística impresionante. La dinámica entre Loki y Mobius se explora con mayor profundidad, proporcionando momentos tanto cómicos como emotivos. La serie sigue siendo un punto culminante del MCU en Disney+.”<br><br></p>
+                <p><u><br>THe A.V Club:</u><br><br>
+
+                    Crítica: “Con su combinación de humor, corazón y locura multiversal, 'Loki' sigue siendo una joya en la corona del MCU. La segunda temporada ofrece una narrativa inteligente y visualmente deslumbrante que mantiene a los espectadores al borde de sus asientos. La incorporación de personajes como Ouroboros 'OB' añade una nueva dimensión de ingenio a la serie.”<br><br></p>
+                <p><u><br>Screen Rant:</u><br><br>
+
+                    Crítica: “La segunda temporada de 'Loki' es una continuación fascinante y llena de acción que explora aún más el vasto multiverso. Tom Hiddleston ofrece una actuación fenomenal, y la serie logra equilibrar sus elementos de ciencia ficción con una narrativa centrada en los personajes. Cada episodio es un viaje emocionante lleno de sorpresas.”<br><br></p>
+                <p><u><br>Deadline:</u><br><br>
+
+                    Crítica: “'Loki' vuelve con una temporada más compleja y visualmente audaz. La serie sobresale al explorar los dilemas éticos y las intrigas del multiverso mientras mantiene su tono distintivo y su sentido del humor. La química entre Hiddleston y el elenco de apoyo sigue siendo electrizante, haciendo de esta temporada una de las mejores entregas del MCU hasta la fecha.”<br><br></p>
+                <p><u><br>Forbes:</u><br><br>
+
+                    Crítica: “'Loki' sigue sorprendiendo en su segunda temporada con una mezcla brillante de ingenio, emoción y espectaculares efectos visuales. La serie se eleva con una narrativa que desafía la percepción del tiempo y el espacio, manteniendo a los espectadores cautivados en cada episodio. Tom Hiddleston demuestra una vez más su habilidad para darle vida a Loki con profundidad y carisma, haciendo de esta entrega un viaje irresistible a través del multiverso.”<br><br></p>     
+            </article>
         </section>
         <footer>
             <div class="redes">
-                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
-                <h4>©2024 Hecho por Gauna, Nicolás Daniel</h4>
+                <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
             </div>
         </footer>
         <script type="text/javascript">
