--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 </div>
                 </article>
             <article class="secundario">
-                <div>
+                <div class="div_inicio">
                     <img src="imagenes/galeria/throg.jpg" alt="Throg">
                     <h2>EASTER EGGS</h2>
                 </div>
-                <div>
+                <div class="div_inicio">
                     <a href="https://www.youtube.com/watch?v=KcBStos46EM"><img src="imagenes/galeria/trailer.jpg" alt="Throg">
                     <h2>TRAILER OFICIAL</h2>
                     </a>
                 </div>
-                <div>
+                <div class="div_inicio">
                     <a href="https://www.marvel.com/movies"><img src="imagenes/galeria/Marvel Studios.jpg" alt="MARVEL STUDIOS">
                     <h2>MARVEL STUDIOS</h2>
                     </a>
@@ -58,10 +58,10 @@
         </section>
         <footer>
             <div class="redes">
-                <a href="#"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
                 <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
